responsive changes and some filtering improvements

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "ng4-tag-input": "^1.0.5",
-    "rxjs": "~6.2.0",
+    "ngx-chips": "^2.0.0-beta.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.4.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
