--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "axios": "^0.18.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "ng4-tag-input": "^1.0.5",
